--- a/_data/data.yml
+++ b/_data/data.yml
@@ -3,189 +3,142 @@
 #
 
 sidebar:
-    about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
-    tagline: Full Stack Developer
+    name: Barry Rice
+    tagline: Solutions Engineer
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: hello@webjeda.com
-    phone: 012 345 6789
-    website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    xing: alandoe
-    github: sharu725
-    telegram: # add your nickname without '@' sign
-    gitlab:
-    bitbucket:
-    twitter: '@webjeda'
-    stack-overflow: # Number/Username, e.g. 123456/alandoe
-    codewars:
-    goodreads: # Number-Username, e.g. 123456-alandoe
-
-    languages:
-      - idiom: English
-        level: Native
-
-      - idiom: French
-        level: Professional
-
-      - idiom: Spanish
-        level: Professional
+    email: barryrice82@googlemail.com
+    phone: 07725488572
 
     interests:
-      - item: Climbing
+      - item: Football
         link:
 
-      - item: Snowboarding
+      - item: Running
         link:
 
-      - item: Cooking
+      - item: Coaching (Youth Football )
         link:
 
 career-profile:
     title: Career Profile
     summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
+      Highly skilled, passionate, hands on solutions engineer with over 16 years
+      experience of designing and developing large scale enterprise systems. Has
+      a passion for designing cloud native serverless first architectures to ensure teams
+      build quickly, iterate and deliver products which truly meet the customer needs.
+
+      A natural leader, with an ability to motivate others, earn trust and build strong working relationships
+      resulting in a proven track record of consistently delivering.
+
 education:
-    - degree: MSc in Computer Science
-      university: University of London
-      time: 2011 - 2012
-      details: |
-        Describe your study here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-        sociis natoque penatibus et magnis dis parturient montes, nascetur
-        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-        pretium quis, sem.
-          - Bullet point
-          - Bullet point
-    - degree: BSc in Applied Mathematics
-      university: Bristol University
-      time: 2007 - 2011
-      details: |
-        Describe your study here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-        sociis natoque penatibus et magnis dis parturient montes, nascetur
-        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-        pretium quis, sem.
-          - Bullet point
-          - Bullet point
+    - degree: BEng Hons in Electronic & Software Engineering
+      university: Queens University Belfast
+      time: 2000 - 2004
+
 experiences:
-    - role: Lead Developer
-      time: 2015 - Present
-      company: Startup Hubs, San Francisco
+    - role: Solutions Engineer
+      time: 2020 - Present
+      company: Liberty IT, Belfast
       details: |
-        Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-        enim. Donec pede justo. Sed ut perspiciatis unde omnis iste natus
-        error sit voluptatem accusantium doloremque laudantium, totam rem
-        aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-        architecto beatae vitae dicta sunt explicabo.
-          - Bullet point
-          - Bullet point
-    - role: Senior Software Engineer
-      time: 2014 - 2015
-      company: Google, London
+         <b>Role and Responsibilities</b>
+
+          - Driving our Cloud Native Serverless First adoption
+          - Providing updates and reviewing designs with architecture team
+          - Mentoring and coaching of development teams
+          - Providing feedback to development teams
+          - Collaborating closely with business partners to define stories
+          - Providing Technical oversight of the analysis and design across a number of projects
+          - Collaborating with senior business and management stakeholders to negotiate release plans
+          - Supporting the pursuit of engineerig excellence through the adoption of the Well Architected Framework
+          - Facilitating Threat Modelling sessions and engaging with security teams
+    - role: Principal Software Engineer
+      time: 2012 - 2020
+      company: Liberty IT, Belfast
       details: |
-        Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem.
-          - Bullet point
-          - Bullet point
-    - role: UI Developer
-      time: 2012 - 2014
-      company: Amazon, London
-      details: |
-        Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem.
-          - Bullet point
-          - Bullet point
+          <b>Role and Responsibilities</b>
+
+           - Leading the development teams, ensuring we deliver high quality solutions that meet our customer needs
+           - Mentoring and coaching of development teams
+           - Providing feedback to development teams
+           - Collaborating closely woth business partners to understand requirements and define stories
+           - Supporting Delivery Lead in project planning (resource planning, defining milestones etc ) to ensure we meet deadlines
+           - Developing proof of concepts and then evoling these to solve complex problems
+           - Looking for opportunities to innovate and encouraging others to also
+           - Collaborating with Architecture team
+
 projects:
     title: Projects
     intro: >
-      You can list your side projects or open source libraries in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
+       Throughout my 16 years with Liberty IT I have been chosen to be the lead developer on many business critical projects. Below are some of my recent projects.
     assignments:
-      - title: Velocity
-        link: "#hook"
-        tagline: "A responsive website template designed to help startups promote, market and sell their products."
+      - title: Distribution Capabilities Platform
+        link: ""
+        tagline: "Solutions Engineer responsible for architecture design of the Distribution Capabilities Platform, which is made up of value-added services that enhance
+        our insurance quoting process to make it easier, faster, and more seamless for a customer, agent,
+        or third party to get a quote and bind a policy. The capabilities built within this platform support all of our distribution channels
+        to ensure we build once, use many to unlock speed and efficiency for all of Distribution. Building upon the Serverless patterns
+        developed for Home Oasis2 but also now looking to take an Event Driven approach to ensure we can decouple from downstream systems.
+        Technologies used: ApiGateway, Lambda, EventBridge, DocumentDB, DynamoDB, OAuth, JWT, Kubernetes, TypeScript, Kafka, ElasticSearch, Elasticache, Datadog, Splunk, Bamboo Specs"
 
-      - title: DevStudio
-        link: "#"
-        tagline: "A responsive website template designed to help web developers/designers market their services."
+      - title: Home Oasis2
+        tagline: "Following on from the success of the Auto Omega2 program I was tasked with leading the effort to build a new Direct Sales UI and
+        Quoting Platform in support of a new home rating program. I took the lead role in designing our Architecture for this project and was the driving force behind
+        us taking a Cloud Native Serverless First approach.
+        Technologies used: ReactJS, Apollo GraphQL, JavaScript, TypeScript, CDK, ApiGateway, Lambda, DynamoDB, DocumentDB, SNS, SQS, Datadog, Bamboo Specs"
 
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
+      - title: Bundling ( MVP & Best in Class )
+        tagline: "With the roll-out of the Auto Omega2 project our business partners made a conscious decision that quote bundling wouldn't be supported initially.
+        I was the lead developer across a couple of teams in Boston and Belfast tasked with designing and implementing an MVP solution to plug the gap.
+        Following initial team Design Thinking sessions in Boston we designed, prototyped and then delivered a product in less than 4 months.
+        Our MVP solution exceeded the business expectations which resulted in the Best in Class portion of the project being de-prioritised in favour of Home Oasis2
+        Technologies used: React, Dojo, Apollo GraphQL, JavaScript, ApiGateway, Lambda, Splunk"
 
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
+      - title: Auto Omega2 (Helios)
+        tagline: "A suite of new stateless APIs to support quote and bind capabilities for a new Auto Omega2 rating program.
+        These APIs were initially built to support the Direct Sales UI however due to the success of the project were later utilized by other
+        distribution channels within Liberty. Technologies used: Java, Spring Boot, Docker, Elasticache, AppDynamics, Splunk"
 
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
-
-publications:
-    title: Publications
-    intro: |
-      You can list your publications in this section. Lorem ipsum dolor sit
-      amet, consectetur adipiscing elit. Vestibulum et ligula in nunc
-      bibendum fringilla a eu lectus.
-    papers:
-      - title: The Art of Computer Programming
-        link: "#"
-        authors: Donald E. Knuth
-        conference: Addison-Wesley, 1968
-
-      - title: "Genetic Programming III: Darwinian Invention &amp; Problem Solving"
-        link: "#"
-        authors: Koza, J.R., Andre, D., Bennett, F.H., Keane, M.A.
-        conference: "Morgan Kaufmann Publishers Inc., San Francisco, CA, USA, 1st edn. (1999)"
-
-      - title: A syntax directed compiler for Algol 60
-        link: "#"
-        authors: Edgar T. Irons
-        conference: "Comm. ACM 4 (1961), 51–55"
+      - title: CodeGreen
+        tagline: "Enablement project in which we were tasked with improving the performance and stability of our Direct Sales application whilst also looking
+        to improve and optimise our developer experience. Was only a 6 month engagement however a number of the processes and artifacts we created
+        are still core to the continued success of the DirectSales application. The MockServer that we created has also been used across a number of future projects
+        (eg Omega2, Oasis2 etc )
+        Technologies used: Javascript, MongoDB, Express, Bash, Saucelabs, WebdriverIO, Mocha, Bamboo, Splunk"
 
 skills:
     title: Skills &amp; Proficiency
 
     toolset:
-      - name: Python & Django
-        level: 98%
-
-      - name: Javascript & jQuery
-        level: 98%
-
-      - name: Angular
-        level: 98%
-
-      - name: HTML5 & CSS
-        level: 95%
-
-      - name: Ruby on Rails
+      - name: Serverless First Development
         level: 85%
 
-      - name: Sketch & Photoshop
-        level: 60%
+      - name: Service Architecture Design
+        level: 85%
+
+      - name: Event Driven Architecture Design
+        level: 75%
+
+      - name: Software Testing Practices and Disciplines
+        level: 85%
+
+      - name: Agile Delivery Methods
+        level: 85%
+
+      - name: Cloud DevOps
+        level: 80%
+
+      - name: Javascript, TypeScript, Node.js, React,
+        level: 85%
+
+      - name: Java
+        level: 85%
+
+
 
 footer: >
     Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
