--- a/_data/data.yml
+++ b/_data/data.yml
@@ -6,7 +6,7 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Barry Rice
+    name: Barry Rice test
     tagline: Solutions Engineer
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
